--- a/assets/css/new.css
+++ b/assets/css/new.css
@@ -14,11 +14,12 @@
 
 
 .priloder{
-    background: url("../img/Radio-1s-200px.gif")no-repeat;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    z-index: 22;
+    background: url("../img/Spinner-3s-210px.gif")no-repeat center;
+    background-color: #f1f2f3;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 2;
 }
 
 header{
